fixing filter's style

--- a/simoneperele.com/html/skin/frontend/ultimo/simone/css/override-theme.css
+++ b/simoneperele.com/html/skin/frontend/ultimo/simone/css/override-theme.css
@@ -1839,8 +1839,8 @@ border:1.5px solid #D201D7;
 	border-bottom: 1px solid #D2D1D7;*/
 }
 #filter-content {min-width: 250px;}
-/*.filter-content {position: absolute!important; top:530px; left:100px;z-index:100;}*/
-.amshopby-filters-top .filter-content {
+.main-container .inner-container .filter-content {position: absolute!important; top:530px; left:100px;z-index:100;}
+.inner-container .amshopby-filters-top .filter-content {
 	position: static;
 }
 #action-status {min-width: 350px; position: relative; top: -20px;} /*test*/
@@ -2682,8 +2682,8 @@ h3{font-family: 'playfair_displayregular' !important; font-size:18px; }
 	}
 
 	#filter-block .block-title:after {position: absolute;top:15px;}
-    #filter-content {
-		position:relative;
+	.main-container .inner-container .filter-content {
+		position:relative!important;
 		top:0;
 		left:0;
 		float:left;
