--- a/simoneperele.com/html/app/design/frontend/ultimo/simone/template/amasty/amshopby/view_top.phtml
+++ b/simoneperele.com/html/app/design/frontend/ultimo/simone/template/amasty/amshopby/view_top.phtml
@@ -24,7 +24,7 @@
         </div>
 
 
-        <div class="block-content filter-toggle-content filter-wrapper">
+        <div id='filter-wrapper' class="block-content filter-toggle-content filter-wrapper">
         <!--<div class="filterby"><strong><span><?php echo $this->__('Filter by:') ?></span></strong></div>-->
         <!--
             <?php echo $this->getStateHtml() ?>
