--- a/simoneperele.com/html/app/design/frontend/ultimo/simone/template/amasty/amshopby/view_top.phtml
+++ b/simoneperele.com/html/app/design/frontend/ultimo/simone/template/amasty/amshopby/view_top.phtml
@@ -5,6 +5,7 @@
  * @package Amasty_Shopby
  */
 ?>
+</div>
 <?php if($this->canShowBlock()): ?>
 
     <div id="filter-block" class="block block-layered-nav">
@@ -25,6 +26,8 @@
 
 
         <div id='filter-wrapper' class="block-content filter-toggle-content filter-wrapper">
+
+
         <!--<div class="filterby"><strong><span><?php echo $this->__('Filter by:') ?></span></strong></div>-->
         <!--
             <?php echo $this->getStateHtml() ?>
