fixed bugs at mobile size

--- a/simoneperele.com/html/app/design/frontend/ultimo/simone/template/amasty/amshopby/view_top.phtml
+++ b/simoneperele.com/html/app/design/frontend/ultimo/simone/template/amasty/amshopby/view_top.phtml
@@ -5,7 +5,8 @@
  * @package Amasty_Shopby
  */
 ?>
-</div>
+
+<div style="height:1px;"></div>
 <?php if($this->canShowBlock()): ?>
 
     <div id="filter-block" class="block block-layered-nav">
@@ -74,7 +75,7 @@
 
 
 
-        <!--</div>-->
+
   </div>
 <?php else: ?>
     <div style="display:none" class="<?php echo $this->getBlockId()?>"></div>
