--- a/simoneperele.com/html/app/design/frontend/ultimo/simone/template/amasty/amshopby/attribute.phtml
+++ b/simoneperele.com/html/app/design/frontend/ultimo/simone/template/amasty/amshopby/attribute.phtml
@@ -158,7 +158,7 @@ if ($this->getShowLessMore() && in_array($this->getDisplayType(), array(
                     });
                 }
             //}
-            if ($(window).width() <= 768) {
+            if (window.matchMedia('(max-width: 768px)').matches) {
                 $('.filter-toggle-content').hide();
             }
             else {
@@ -172,7 +172,8 @@ if ($this->getShowLessMore() && in_array($this->getDisplayType(), array(
             }
 
             $('#filter-block').off().click(function() {
-                if ($(window).width() > 768) {
+                //console.log($(window).width() );
+                if (!window.matchMedia('(max-width: 768px)').matches) {
                     return;
                 } else {
                     if (!$(this).hasClass('active-filter')) {
@@ -191,7 +192,7 @@ if ($this->getShowLessMore() && in_array($this->getDisplayType(), array(
 
             $(window).resize(function() {
                 $('#filter-block').removeClass('active-filter');
-                if ($(this).width() > 768) {
+                if (!window.matchMedia('(max-width: 768px)').matches) {
                     //console.log('>768');
                     $('.filter-toggle-content').show();
                     $('#filter-content').appendTo('#filter-wrapper');
